--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,55 @@
 {
-    "routes": [
-      {
-        "src": "/assets/images/(.*)",
-        "headers": { "cache-control": "s-maxage=604800" },
-        "dest": "/images/$1"
-      },
-      {
-        "src": "/assets/(.*).(js|css)",
-        "headers": { "Accept-Encoding": "gzip", "cache-control": "s-maxage=604800"  },
-        "dest": "/assets/$1"
-      }
-    ]
-  }
+    "headers": [
+            {
+                "source": "/(.*)",
+                "headers": [
+                    {
+                        "key": "X-Content-Type-Options",
+                        "value": "nosniff"
+                    },
+                    {
+                        "key": "X-Frame-Options",
+                        "value": "DENY"
+                    },
+                    {
+                        "key": "Content-Security-Policy",
+                        "value": "default-src * data: 'unsafe-inline' 'unsafe-eval'; worker-src * data: blob:; script-src * data: blob: 'unsafe-eval' 'unsafe-inline';"
+                    },
+                    {
+                        "key": "X-XSS-Protection",
+                        "value": "1; mode=block"
+                    },
+                    {
+                        "key": "Accept-Encoding",
+                        "value": "br;q=1.0, gzip;q=0.8, ;q=0.1"
+                    },
+                    {
+                        "key": "Cache-Control",
+                        "value": "max-age=31536000"
+                    }
+                ]
+            },
+            {
+                "source": "/(.).(jpe?g|gif|png|ico|webp|svg|xml|webm|mp4|mpe?g|ttf|otf|woff2?)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=31536000, immutable"
+                    }
+                ]
+            },
+            {
+                "source": "/(.*).(css|js|pdf)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "public, max-age=2628288, immutable"
+                    },
+                    {
+                        "key": "Accept-Encoding",
+                        "value": "br;q=1.0, gzip;q=0.8, *;q=0.1"
+                    }
+                ]
+            }
+        ]
+}
